quick fix for overflow

--- a/css/style.css
+++ b/css/style.css
@@ -179,8 +179,6 @@ p {
     background-color: #abc5e5;
     margin-bottom: 4em;
     padding: 2em;
-    margin-left: -10em;
-    margin-right: -10em;
 }
 
 /*--------------------------------------------------------------
